Minor fixes to presentations
updated with minor fixes to presentations.

--- a/_talks/2016-05-17-CSDMS.md
+++ b/_talks/2016-05-17-CSDMS.md
@@ -3,7 +3,7 @@ title: "Mechanisms of Shrub Encroachment explored in Southwestern United States 
 collection: talks
 type: "poster"
 permalink: /talks/2016-05-17-CSDMS
-venue: "Boulder, CO"
+venue: ""
 date: 2016-05-17
 location: "Boulder, Colorado"
 ---
