--- a/_talks/2017-05-23-CSDMS.md
+++ b/_talks/2017-05-23-CSDMS.md
@@ -3,7 +3,7 @@ title: "Studying the role of disturbances on woody plant encroachment in Southwe
 collection: talks
 type: "poster"
 permalink: /talks/2017-05-23-CSDMS
-venue: ""
+venue: "CSDMS Annual Meeting 2017"
 date: 2017-05-23
 location: "Boulder, Colorado"
 ---
